pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-limit-allowlist.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-limit-allowlist
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    nginx.ingress.kubernetes.io/limit-allowlist: "10.0.0.0/24,192.168.1.1"
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
